Adding CSS and JS files

--- a/ShantanuHTML.html
+++ b/ShantanuHTML.html
@@ -4,8 +4,10 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
         <title>Everything Shantanu Shukla</title>
+        <link rel="stylesheet" type="text/css" href="ShantanuCSS.css">
     </head>
     <body>
 
+        <script src="ShantanuJS.js"></script>
     </body>
 </html>
