--- a/ContactPage.html
+++ b/ContactPage.html
@@ -10,6 +10,11 @@
     </head>
 
     <body>
+      <a href="HomePage.html">
+        <button class="contact-button">
+          Back
+        </button>
+      </a>
         <h1> 
           Contact Information 
         </h1>
