--- a/HomePage.html
+++ b/HomePage.html
@@ -19,26 +19,39 @@
           Contact Info
         </button>
         
+      </a>
+
+      <a href="AboutMe.html">
         <button class="about-button">
           About Me
         </button>
+      </a>
 
+      <a href="MissionsExps.html">
         <button class="me-button">
           Mission & Experience
         </button>
       </a>
 
-        <h1>
-          Welcome!
+        <h1 class="main-text">
+          Welcome to Everything Shantanu Shukla!
         </h1>
 
-        <h2>
-          "Whatever you are not changing, you are choosing"
+        <h2 class="sub-text">
+          Aspiring Software Engineer 	&#8743; Full Stacks Developer
         </h2>
 
-        <h3>
-          -Laurie Buchanan
+        <h3 class="qoute">
+          "Whatever you are not changing, you are choosing"
         </h3>
+
+        <h4 class="main-text">
+          -Laurie Buchanan
+        </h4>
+
+        <p class="normal-text">
+          As a computer science student who loves problem-solving and programming, I am seeking oppourtunities as a software developer that will allow me to make meaningful contributions to the industry while honing my skills. This site will allow you to learn about my journey thus far and get to know me.
+        </p>
 
         <script src="ShantanuJS.js"></script>
         
