Added text content

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -15,5 +15,39 @@
         Back
       </button>
     </a>
+
+    <h1 class="left-main-text">
+      Bio
+    </h1>
+
+    <p> 
+      My name is Shantanu Shukla, and I am a Virginia Tech student majoring in computer science. I plan on graduating by the summer of 2026. 
+      I was born on April 4th, 2006. 
+      I am a first-generation Indian American who grew up in Hatboro, Pennsylvania, with my Mom, Dad, Older Sister, and dog, as you can see in the image. 
+      I attended Upper Moreland until I was around 10 years old and then moved to Chesterbrook, PA, to complete my schooling in the Treddyrfirin Easttown School District. 
+      I graduated from Conestoga High School in May of 2024 and now am an excited CS student at Virginia Tech.
+    </p>
+
+    <h1 class="right-main-text">
+      Hobbies
+    </h1>
+
+    <p>
+      Although I am curious about almost anything I see and can get my hands on, I have a few hobbies that keep my attention outside class. Since I was 9, I have been playing the alto saxophone and enjoy playing various jazz charts from my heroes like Charlie Parker and Cannonball Adderley. I have performed for multiple family gatherings and take any chance to snag a gig for myself. I have practiced martial arts (Tang Soo Do) for roughly 10 years, ages 5-10 and 13-18. I earned two black belts at the World and International Tang Soo Do associations, where I trained before and after moving, respectively. Additionally, I like to play chess
+when I get the chance, both in person and online. Although I am not as active anymore, I spent a lot of my time in India playing against my relatives and friends, who were always a challenge. 
+    </p>
+
+    <h1 class="left-main-text">
+      Interests
+    </h1>
+
+    <p>
+      Growing up, a couple of things caught my interest and stayed with me until today and probably forever. For starters, I am a vegetarian Hindu and hope
+to one day build a sanctuary for abused animals in both America and India. As a religious man who strongly believes in animal rights, I hope to one day make a difference 
+for the many animals today who are abused in countries that don't have strongly enforced laws protecting them. I've also been interested in physics and space since childhood.
+My father and I have always watched space probes and shuttles being launched into space, and I have studied physics and calculus since middle school. If I didn't find computer science
+and systems even more fascinating, I would pursue a career as a physicist of some kind. I was physics club president at my high school and have tutored many students
+in physics and programming both online and in person through the many volunteering organizations I was a part of. 
+    </p>
   </body>
 </html>
