--- a/HomePage.html
+++ b/HomePage.html
@@ -29,7 +29,7 @@
 
       <a href="MissionsExps.html">
         <button class="me-button">
-          Mission & Experience
+          Experience
         </button>
       </a>
 
@@ -49,8 +49,12 @@
           -Laurie Buchanan
         </h4>
 
+        <h1 class="main-text">
+          Mission
+        </h1>
+
         <p class="normal-text">
-          As a computer science student who loves problem-solving and programming, I am seeking oppourtunities as a software developer that will allow me to make meaningful contributions to the industry while honing my skills. This site will allow you to learn about my journey thus far and get to know me.
+          As a computer science student who loves problem-solving and programming, I seek oppourtunities as a software developer that will allow me to make meaningful contributions to the industry while honing my skills. This site will allow employers and visitors alike to learn about my journey thus far and get to know me.
         </p>
 
         <script src="ShantanuJS.js"></script>
