--- a/MissionsExps.html
+++ b/MissionsExps.html
@@ -15,5 +15,21 @@
         Back
       </button>
     </a>
+
+    <h1 class="left-main-text">
+      Education
+    </h1>
+
+    <h1 class="right-main-text">
+      Skills and Experiences
+    </h1>
+
+    <h1 class="left-main-text">
+      Projects
+    </h1>
+
+    <h1 class="main-text">
+      Downloads
+    </h1>
   </body>
 </html>
