--- a/AboutMe.html
+++ b/AboutMe.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <a href="HomePage.html">
+    <a href="index.html">
       <button class="about-button">
         Back
       </button>
