--- a/ContactPage.html
+++ b/ContactPage.html
@@ -10,7 +10,7 @@
     </head>
 
     <body>
-      <a href="HomePage.html">
+      <a href="index.html">
         <button class="contact-button">
           Back
         </button>
