--- a/MissionsExps.html
+++ b/MissionsExps.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <a href="HomePage.html">
+    <a href="index.html">
       <button class="me-button">
         Back
       </button>
